# api/internal/model/user_model.go
@@ -26,11 +26,11 @@ type RegisterUserRequest struct {
 
 type UpdateUserRequest struct {
 	ID       uuid.UUID     `json:"id" validate:"required,uuid"`
-	Name     string        `json:"name" validate:"required,max=100"`
-	Username string        `json:"username" validate:"required"`
+	Name     string        `json:"name" validate:"omitempty,required,max=100"`
+	Username string        `json:"username" validate:"omitempty,required"`
 	Password string        `json:"password" validate:"omitempty,min=6"`
-	Phone    string        `json:"phone" validate:"required,numeric,max=15"`
-	Role     enum.UserRole `json:"role" validate:"required,userrole"`
+	Phone    string        `json:"phone" validate:"omitempty,required,numeric,max=15"`
+	Role     enum.UserRole `json:"role" validate:"omitempty,required,userrole"`
 }
 
 type DeleteUserRequest struct {
@@ -53,9 +53,4 @@ type UserResponse struct {
 	Phone     string        `json:"phone"`
 	Role      enum.UserRole `json:"role"`
 	CreatedAt time.Time     `json:"createdAt"`
-}
-
-type LoginUserResponse struct {
-	User  UserResponse
-	Token string `json:"token"`
 }
